fix width on mobile

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,4 +1,5 @@
 .root {
+  width: calc(100vw - 20px);
   padding: 20px 10px;
   margin: 0 auto;
   max-width: 960px;
